...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
...
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toTopOf="@id/errText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
...

                    <EditText
                        android:id="@+id/titleTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/startDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:src="@drawable/baseline_arrow_forward_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/endDay"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/endTime"/>

                <Button
...

                <com.example.cystaff_frontend.calendar.CalendarMonthView
                    android:id="@+id/calendarMonthViewSelect"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
...

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:singleSelection="true"
                    app:selectionRequired="true"
                    app:checkedButton="@id/meetingSelection"
                    app:layout_constraintTop_toBottomOf="@id/barrier"
                    app:layout_constraintEnd_toEndOf="@id/titleTextLayout">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/reminderSelection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/currentMemberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintTop_toTopOf="@id/showHideCurrMembers"
                    app:layout_constraintBottom_toBottomOf="@id/showHideCurrMembers"
                    app:layout_constraintStart_toStartOf="parent"/>
...

                    <EditText
                        android:id="@+id/searchTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/inviteeRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
...
                    app:singleSelection="true"
                    app:selectionRequired="true"
                    app:checkedButton="@id/onlineSelection"
                    app:layout_constraintTop_toBottomOf="@id/inviteeRecycler"
                    app:layout_constraintEnd_toEndOf="@id/titleTextLayout">
...

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/inPersonSelection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/buildingTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
...

                    <AutoCompleteTextView
                        android:id="@+id/buildingInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <AutoCompleteTextView
                        android:id="@+id/roomInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cancelBtn" />

        <Button
...

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
...
