...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInText"
        app:layout_constraintVertical_bias="0.05"
        app:startIconDrawable="@drawable/baseline_email_24">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintTop_toBottomOf="@+id/emailTextInput"
        app:layout_constraintVertical_bias="0"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="246dp"
        android:layout_height="48dp"
        android:text="Log In"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
...
